--- a/themes/next/_config.yml
+++ b/themes/next/_config.yml
@@ -462,7 +462,7 @@ needmoreshare2:
 
 # Google Webmaster tools verification setting
 # See: https://www.google.com/webmasters/
-#google_site_verification:
+google_site_verification: MSg3cLDuaZGA2z_kK5-_VZ7jR2jVB9EhEgMQUr8STnM
 
 # Google Analytics
 #google_analytics:
