--- a/package.json
+++ b/package.json
@@ -17,5 +17,9 @@
     "hexo-renderer-marked": "^0.3.0",
     "hexo-renderer-stylus": "^0.2.0",
     "hexo-server": "^0.2.2"
+  },
+  "devDependencies": {
+    "hexo-generator-baidu-sitemap": "^0.1.2",
+    "hexo-generator-sitemap": "^1.2.0"
   }
 }
